--- a/templates/concurs.html
+++ b/templates/concurs.html
@@ -1,4 +1,4 @@
-Название конкурса: {{concurs_name}},
+Название конкурса: {{concurs_name}}
 Дата проведения: {{concurs_date}}
 Статус конкурса: {{concurs_state}}
 Город проведения: {{concurs_town}}
